# ccwatch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: app.py  config.py  constants.py
src/calculations/: cost.py
src/data/: loader.py  processors.py
src/utils/: logging_config.py  session_utils.py
src/visualizations/: analysis.py  charts.py  metrics.py  monitoring.py
tests/: __init__.py  conftest.py  test_calculations.py  test_config.py  test_cost_calculations.py  test_data_loader.py  test_data_processors.py  test_duckdb_loader.py  test_file_operations.py  test_logging.py  test_session_utils.py
tests/fixtures/: sample_logs.py
